[package]
name = "pawn-json"
authors = ["Southclaws <hello@southcla.ws>"]
version = "0.9.0"
edition = "2018"

[lib]
name = "pawn_json"
crate-type = ["dylib"]

[dependencies]
samp = {git="https://github.com/ZOTTCE/samp-rs/", features = ["encoding"]}
log = "0.4.6"
serde_json = "1.0.37"
string-error = "0.1.0"
enum_primitive = "0.1.1"
fern = "0.5.7"